--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Portofolio</h2>
-                    <h3 class="section-subheading text-muted">This is about my portofolio</h3>
+                    <h3 class="section-subheading text-muted">This is my web demo portofilio</h3>
                 </div>
             </div>
             <div class="row">
@@ -206,11 +206,11 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <a target="blank" href="https://github.com/riznanov/Algoritma-Aprori"> 
-                    </a>
+                        
                     <div class="portfolio-caption">
-                        <h4>Implementasi Algoritma Apriori Untuk Merencanakan Stok</h4>
-                        <p class="text-muted">Algoritma Apriori</p>
+                        <a target="blank" href="http://demo.kspsmmonline.com/"> 
+                        <h4>Sistem Informasi Koperasi Simpan PInjam</h4></a>
+                        <p class="text-muted">Sistem informasi yang dibuat khusus sesuai dengan kebijakan dan permintaan dari pemilik Koperasi</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
