--- a/index.html
+++ b/index.html
@@ -206,28 +206,27 @@
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        
+                
                     <div class="portfolio-caption">
                         <a target="blank" href="http://demo.kspsmmonline.com/"> 
                         <h4>Sistem Informasi Koperasi Simpan PInjam</h4></a>
-                        <p class="text-muted">Sistem informasi yang dibuat khusus sesuai dengan kebijakan dan permintaan dari pemilik Koperasi</p>
+                        <p class="text-muted">Sistem informasi yang dibuat khusus sesuai dengan kebijakan dan permintaan dari pemilik Koperasi. Klik judul untuk simulasi</p>
                     </div>
                 </div>
-                <div class="col-md-4 col-sm-6 portfolio-item">
+            <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
                                 <i class="fa fa-plus fa-3x"></i>
                             </div>
                         </div>
-                        <a target="blank" href="https://github.com/riznanov/K-Means"></a>
-                    </a>
                     <div class="portfolio-caption">
-                        <h4>Sistem Pengelompokan Siswa Baru Metode K-Means</h4>
-                        <p class="text-muted">K-Means</p>
+                        <a target="blank" href="https://stock.adobe.com/contributor/208106581/Zeva">
+                        <h4>Logo Design</h4></a>
+                        <p class="text-muted">Portofolio Design di Adobe Stock. Klik Judul untuk melihat.</p>
                     </div>
 				</div>
-				<div class="col-md-4 col-sm-6 portfolio-item">
+			<!--	<div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
                             <div class="portfolio-hover-content">
@@ -288,7 +287,7 @@
                 </a>
                 </div>  
 			
-            </div>
+            </div> -->
         </div>
     </section>
     <!-- About Section -->
