--- a/index.html
+++ b/index.html
@@ -318,8 +318,8 @@
                             
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>February 2018 - Maret 2019</h4>
-                                    <h4 class="subheading">Staff Administrative in CV. Selaras Mitra Sejati. Acaciana Magelang</h4>
+                                    <h4>2018</h4>
+                                    <h4 class="subheading">IT Staff (Graphic Designer) in BPR Prima Mertoyudan Sejahtera</h4>
                                 </div>
                                
                             </div>
@@ -327,11 +327,11 @@
 			 <li>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>September 2019 - Now</h4>
+                                    <h4>2019 - 2020</h4>
                                     <h4 class="subheading">Programmer</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Female Programmer in PT. Electronic Data Interchange Indonesia</p>
+                                    <p class="text-muted">Staff IT (Programmer) in KSP Sidomukti Makmur</p>
                                 </div>
                             </div>
                         </li>
@@ -416,12 +416,12 @@
                 <div class="col-md-4">
                     <span class="copyright">Copyright &copy; Helmy Dewatnara 2020</span>
                 </div>
-                <div class="col-md-4">
+            <!--   <div class="col-md-4">
                     <ul class="list-inline social-buttons">
                         <li><a href="https://linkedin.com/in/rizna-novia-faradilla" target="blank"><i class="fa fa-linkedin"></i></a>
                         </li>
                     </ul>
-                </div>
+                </div> -->
                 <div class="col-md-4">
                     <ul class="list-inline quicklinks">
                        <p class="fa fa-envelope">&nbsp;</p>valacedesign@gmail.com
