--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
 
     
     <!-- Clients Aside -->
-    <aside class="clients">
+  <!-- <aside class="clients">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-sm-6">
@@ -362,7 +362,7 @@
              
             </div>
         </div>
-    </aside>
+    </aside> -->
 <hr>
     <!-- Contact Section -->
     <!--
