--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
                     <div class="portfolio-caption">
                         <a target="blank" href="http://demo.kspsmmonline.com/"> 
                         <h4>Sistem Informasi Koperasi Simpan PInjam</h4></a>
-                        <p class="text-muted">Sistem informasi yang dibuat khusus sesuai dengan kebijakan dan permintaan dari pemilik Koperasi. Klik judul untuk simulasi</p>
+                        <p class="text-muted">Sistem informasi yang dibuat khusus sesuai dengan kebijakan dan permintaan dari pemilik Koperasi. Klik judul untuk simulasi. Username pakai user, password pakai user. :)</p>
                     </div>
                 </div>
             <div class="col-md-4 col-sm-6 portfolio-item">
