--- a/index.html
+++ b/index.html
@@ -349,6 +349,8 @@
         </div>
     </section>
 
+    <a href="https://info.flagcounter.com/f5cM"><img src="https://s01.flagcounter.com/count2/f5cM/bg_000000/txt_FFFFFF/border_000000/columns_2/maxflags_10/viewers_0/labels_0/pageviews_0/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
+
     
     <!-- Clients Aside -->
   <!-- <aside class="clients">
